Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.0 Beta 2
-
None
-
Windows 10
Visual Studio 2017 x64
Description
When building a project that uses Qt Remote Objects from Visual Studio, .rep files are not compiled by repc, leading to a project build failure.
Steps to reproduce:
- qmake -tp vc <qt_install_dir>/Examples/Qt-5.X.X/remoteobjects/server/server.pro
- Open server.vcxproj in Visual Studio
- Build
Expected result:
- Project builds successfully
Actual result:
- Project fails to build
> fatal error C1083: Cannot open include file: 'rep_timemodel_source.h': No such file or directory
Attachments
Issue Links
- relates to
-
QTBUG-73396 "qmake -tp vc" ignores extra compiler if its name is "MOC"
-
- Open
-
-
QTBUG-68678 Graduate Qt Remote Objects from TP to fully supported module of Qt
-
- Closed
-
- resulted in
-
QTVSADDINBUG-585 Add support for Qt Remote Objects
-
- Closed
-